--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "generate-types": "tcm -p src/**/*.module.css"
   },
   "dependencies": {
     "react": "^19.1.0",
@@ -22,13 +23,16 @@
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "eslint": "^9.25.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "jiti": "^2.6.1",
     "jsdom": "^27.2.0",
+    "typed-css-modules": "^0.9.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5",
+    "vite": "npm:rolldown-vite@latest",
     "vitest": "^4.0.13"
   }
 }
