--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "generate-types": "tcm -p src/**/*.module.css"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "classnames": "^2.5.1",
     "nanoid": "^5.1.6",
     "react": "^19.1.0",
