--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nanoid": "^5.1.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.10.0",
     "use-immer": "^0.11.0"
   },
   "devDependencies": {
