--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@supabase/supabase-js": "^2.86.0",
     "classnames": "^2.5.1",
     "nanoid": "^5.1.6",
     "react": "^19.1.0",
